--- a/Dat3dEngine/Dat3dEngine.vcxproj.filters
+++ b/Dat3dEngine/Dat3dEngine.vcxproj.filters
@@ -1,17 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Test">
+      <UniqueIdentifier>{ba7cec37-8e61-433b-8298-40c99c470ed0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Rendering">
+      <UniqueIdentifier>{17d317ae-1c33-4f03-a2cb-37d5f82625b0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Rendering\OpenGL">
+      <UniqueIdentifier>{2f120e42-f14e-401b-a086-bb981dd6c066}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Rendering\OpenGL\Source">
+      <UniqueIdentifier>{1e6b294f-0c38-431a-a8f7-db95d94292be}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Test\test.cpp">
+      <Filter>Test</Filter>
+    </ClCompile>
+    <ClCompile Include="Rendering\OpenGL\Source\glad.c">
+      <Filter>Rendering\OpenGL\Source</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="GLRenderer.h">
+      <Filter>Rendering\OpenGL</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
