--- a/Dat3dEngine/Dat3dEngine.vcxproj
+++ b/Dat3dEngine/Dat3dEngine.vcxproj
@@ -28,6 +28,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Rendering\Vulkan\Source\VulkanRenderer.cpp" />
     <ClCompile Include="Test\test.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -43,6 +44,9 @@
     <ClInclude Include="Rendering\Renderer.h" />
     <ClInclude Include="Rendering\Vulkan\VulkanRenderer.h" />
     <ClInclude Include="Rendering\Window\DatWindow.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="EngineAssets\Shaders\GLSL\Fresnel.frag" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
