--- a/Dat3dEngine/Dat3dEngine.vcxproj
+++ b/Dat3dEngine/Dat3dEngine.vcxproj
@@ -38,6 +38,8 @@
     <ClInclude Include="Engine\Config\EngineConfig.h" />
     <ClInclude Include="Engine\DataTypes\StringUtils.h" />
     <ClInclude Include="Engine\ReflectionMacros.h" />
+    <ClInclude Include="Engine\Shaders\FragShader.h" />
+    <ClInclude Include="Engine\Shaders\VertShader.h" />
     <ClInclude Include="Engine\Utilities\Console.h" />
     <ClInclude Include="Engine\Utilities\FileUtilities.h" />
     <ClInclude Include="Engine\Utilities\Logging.h" />
@@ -47,6 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="EngineAssets\Shaders\GLSL\Fresnel.frag" />
+    <None Include="Resources\Shaders\GLSL\test.frag" />
+    <None Include="Resources\Shaders\GLSL\test.vert" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
