--- a/Dat3dEngine/Dat3dEngine.vcxproj.filters
+++ b/Dat3dEngine/Dat3dEngine.vcxproj.filters
@@ -99,8 +99,12 @@
       <Filter>Rendering\Vulkan</Filter>
     </ClInclude>
     <ClInclude Include="Engine\DataTypes\StringUtils.h" />
+    <ClInclude Include="Engine\Shaders\FragShader.h" />
+    <ClInclude Include="Engine\Shaders\VertShader.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="EngineAssets\Shaders\GLSL\Fresnel.frag" />
+    <None Include="Resources\Shaders\GLSL\test.vert" />
+    <None Include="Resources\Shaders\GLSL\test.frag" />
   </ItemGroup>
 </Project>
