--- a/Dat3dEngine/Dat3dEngine.vcxproj.filters
+++ b/Dat3dEngine/Dat3dEngine.vcxproj.filters
@@ -99,8 +99,12 @@
       <Filter>Rendering\Vulkan</Filter>
     </ClInclude>
     <ClInclude Include="Engine\DataTypes\StringUtils.h" />
-    <ClInclude Include="Engine\Shaders\FragShader.h" />
-    <ClInclude Include="Engine\Shaders\VertShader.h" />
+    <ClInclude Include="Engine\Assets\AssetManager\Factories\AssetFactory.h" />
+    <ClInclude Include="Engine\Assets\AssetManager\Factories\FragShaderFactory.h" />
+    <ClInclude Include="Engine\Assets\AssetManager\Assets\BaseAsset.h" />
+    <ClInclude Include="Engine\Assets\AssetManager\Assets\Shaders\FragShader.h" />
+    <ClInclude Include="Engine\Assets\AssetManager\Assets\Shaders\VertShader.h" />
+    <ClInclude Include="Engine\Utilities\Exceptions\UnknownResourceFactoryException.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="EngineAssets\Shaders\GLSL\Fresnel.frag" />
