Created Vector structs

--- a/DatEngine/Engine/CMakeLists.txt
+++ b/DatEngine/Engine/CMakeLists.txt
@@ -7,5 +7,6 @@ target_sources (DatEngine
 add_subdirectory ("AssetManager")
 add_subdirectory ("Config")
 add_subdirectory ("DataTypes")
+add_subdirectory ("Maths")
 add_subdirectory ("Rendering")
 add_subdirectory ("Utilities")
