--- a/DatEngine/EngineDetails.h.in
+++ b/DatEngine/EngineDetails.h.in
@@ -1,3 +1,3 @@
 #define VERSION_MAJOR @DatEngine_VERSION_MAJOR@
 #define VERSION_MINOR @DatEngine_VERSION_MINOR@
-#define VERSION_MINOR @DatEngine_VERSION_PATCH@
+#define VERSION_PATCH @DatEngine_VERSION_PATCH@
