--- a/DatEngine/Engine/Maths/CMakeLists.txt
+++ b/DatEngine/Engine/Maths/CMakeLists.txt
@@ -4,7 +4,6 @@ target_sources (DatEngine
 					"Vector.h"
 					"Vectors/VectorForward.h"
 					"Vectors/VecForward.h"
-					"Vectors/Vec.h"
 					"Vectors/Vec3.h"
 					"Vectors/Double/DVector"
 					"Vectors/Double/DVector2D"
@@ -16,5 +15,5 @@ target_sources (DatEngine
 					"Vectors/Float/FVector2D.h"
 					"Vectors/Float/FVector4D.h"
 					"Source/Vector.cpp"
-					"Source/Vec.cpp"
+					"Source/Vec3.inl"
 )
