Finished templated Vectors

--- a/DatEngine/Engine/Maths/CMakeLists.txt
+++ b/DatEngine/Engine/Maths/CMakeLists.txt
@@ -1,19 +1,14 @@
 target_sources (DatEngine 
 				PUBLIC
 					"CommonMaths.h"
+					"Vector2D.h"
 					"Vector.h"
-					"Vectors/VectorForward.h"
+					"Vector4D.h"
 					"Vectors/VecForward.h"
+					"Vectors/Vec2.h"
 					"Vectors/Vec3.h"
-					"Vectors/Double/DVector"
-					"Vectors/Double/DVector2D"
-					"Vectors/Double/DVector4D"
-					"Vectors/Int/IVector.h"
-					"Vectors/Int/IVector2D.h"
-					"Vectors/Int/IVector4D.h"
-					"Vectors/Float/FVector.h"
-					"Vectors/Float/FVector2D.h"
-					"Vectors/Float/FVector4D.h"
-					"Source/Vector.cpp"
-					"Source/Vec3.inl"
+					"Vectors/Vec4.h"
+					"Vectors/Source/Vec3.inl"
+					"Vectors/Source/Vec2.inl"
+					"Vectors/Source/Vec4.inl"
 )
