--- a/DatEngine/CMakeLists.txt
+++ b/DatEngine/CMakeLists.txt
@@ -4,11 +4,12 @@
 cmake_minimum_required (VERSION 3.17)
 
 # Add source to this project's executable.
-add_executable (DatEngine "Test/test.cpp")
+add_executable (DatEngine "Test/test.cpp" "Editor/Profiling/Profiler.h" "Engine/Utilities/TimeUtils.h")
 
 configure_file (EngineDetails.h.in EngineDetails.h)
 target_include_directories (DatEngine PRIVATE "${PROJECT_BINARY_DIR}")
 target_include_directories (DatEngine PUBLIC "Engine")
+target_include_directories (DatEngine PUBLIC "Editor")
 
 # Add ThirdParty stuff
 add_subdirectory ("ThirdParty")
@@ -17,6 +18,7 @@ add_subdirectory ("ThirdParty")
 target_include_directories (DatEngine PUBLIC "FirstParty")
 
 add_subdirectory ("Engine")
+add_subdirectory ("Editor")
 
 add_custom_command(TARGET DatEngine POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy_directory
