--- a/DatEngine/Engine/CMakeLists.txt
+++ b/DatEngine/Engine/CMakeLists.txt
@@ -9,5 +9,6 @@ add_subdirectory ("Config")
 add_subdirectory ("DataUtils")
 add_subdirectory ("Mesh")
 add_subdirectory ("Maths")
+add_subdirectory ("Platform")
 add_subdirectory ("Rendering")
 add_subdirectory ("Utilities")
