--- a/DatEngine/CMakeLists.txt
+++ b/DatEngine/CMakeLists.txt
@@ -3,8 +3,12 @@
 #
 cmake_minimum_required (VERSION 3.17)
 
+IF(MSVC)
+   ADD_DEFINITIONS(/arch:SSE)
+ENDIF(MSVC)
+
 # Add source to this project's executable.
-add_executable (DatEngine "Test/test.cpp" "Editor/Profiling/Profiler.h" "Engine/Utilities/TimeUtils.h")
+add_executable (DatEngine "Test/test.cpp")
 
 configure_file (EngineDetails.h.in EngineDetails.h)
 target_include_directories (DatEngine PRIVATE "${PROJECT_BINARY_DIR}")
@@ -17,6 +21,7 @@ add_subdirectory ("ThirdParty")
 # Add First Party Stuff
 target_include_directories (DatEngine PUBLIC "FirstParty")
 
+# Start Adding subfiles
 add_subdirectory ("Engine")
 add_subdirectory ("Editor")
 
