Linux specific changes

--- a/DatEngine/Engine/Platform/CMakeLists.txt
+++ b/DatEngine/Engine/Platform/CMakeLists.txt
@@ -8,5 +8,5 @@ target_sources (DatEngine
 if(WIN32)
 	add_subdirectory ("Windows")
 else(WIN32)
-	add_subdirectory ("Linux")
+	add_subdirectory ("Poisx")
 endif(WIN32)
