Updated First Party Libraries

--- a/DatEngine/FirstParty/CMakeLists.txt
+++ b/DatEngine/FirstParty/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required (VERSION 3.17)
 
 add_subdirectory(Dat-Archive)
-TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC "Dat-VFS")
+target_link_libraries(DatEngine PUBLIC DatArchive)
+
+add_subdirectory(Dat-VFS)
+target_link_libraries(DatEngine PUBLIC DatVFS)
