--- a/DatEngine/Engine/Platform/Windows/CMakeLists.txt
+++ b/DatEngine/Engine/Platform/Windows/CMakeLists.txt
@@ -1,4 +1,5 @@
 # Generic
 target_sources (DatEngine
 				PRIVATE
-					"Source/Timing.cpp")
+					"Source/Timing.cpp"
+					"Source/FileUtilities.cpp")
