Moved around content
Assets moved from asset manager to root of engine, assetmanager becomes a subdirectory of assets
corrected poisx to posix
moved a lot of code from headers to source files

--- a/DatEngine/Engine/CMakeLists.txt
+++ b/DatEngine/Engine/CMakeLists.txt
@@ -4,7 +4,7 @@ target_sources (DatEngine
 					"ReflectionMacros.h")
 
 # Subdirectories
-add_subdirectory ("AssetManager")
+add_subdirectory ("Assets")
 add_subdirectory ("Config")
 add_subdirectory ("DataUtils")
 add_subdirectory ("Mesh")
