--- a/DatEngine/Engine/Platform/CMakeLists.txt
+++ b/DatEngine/Engine/Platform/CMakeLists.txt
@@ -1,12 +1,6 @@
-# Generic
-target_sources (DatEngine
-				PUBLIC
-					"Timing.h"
-)
-
 # Subdirectories
 if(WIN32)
 	add_subdirectory ("Windows")
 else(WIN32)
-	add_subdirectory ("Poisx")
+	add_subdirectory ("Posix")
 endif(WIN32)
