--- a/DatEngine/Engine/Utilities/CMakeLists.txt
+++ b/DatEngine/Engine/Utilities/CMakeLists.txt
@@ -1,8 +1,11 @@
 # Utilities
 target_sources (DatEngine
-				PUBLIC
-					"Console.h"
-					"FileUtilities.h"
-					"Logging.h"
-				PRIVATE
-					"Source/FileUtilities.cpp")
+		PUBLIC
+			"Console.h"
+			"FileUtilities.h"
+			"Logging.h"
+			"Timing.h"
+		PRIVATE
+			"Source/FileUtilities.cpp"
+			"Source/Timing.cpp"
+)
